<resources>
    <string name="app_name">BestMeasure</string>

    <!-- TELA DE LOGIN -->
    <string name="login">Login:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar</string>
    <string name="erroLogin">Usuário ou senha inválido.</string>

    <!-- TELA DE DETALHES -->
    <string name="bemvindo">Seja Bem Vindo!</string>
    <string name="iniciar">INICIAR</string>
    <string name="selecao">Seleção:</string>
    <string name="descricao">Descrição:</string>

    <string name="action_settings">Configurações</string>

</resources>
