<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent" >

    <LinearLayout
        style="@style/LinearLayoutLogin" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <TextView
            style="@style/TextView01"
            android:text="@string/login" />

        <EditText
            style="@style/EditText01"
            android:id="@+id/login" />

        <TextView
            style="@style/TextView01"
            android:text="@string/senha" />

        <EditText
            style="@style/EditText01"
            android:id="@+id/senha"
            android:password="true" />

        <TextView
            style="@style/TextViewErro"
            android:id="@+id/erroLogin"
            android:text="@string/erroLogin"
            android:visibility="invisible" />

        <Button
            style="@style/Button01"
            android:id="@+id/botao"
            android:text="@string/entrar" />

    </LinearLayout>

</ScrollView>